# mlir-list

./: CMakeLists.txt  README.md  build.sh  build_llvm_project.sh  clean.sh  create_venv.sh  exercise.md  in-docker  tosource.sh
include/: CMakeLists.txt
include/ListProject-c/: Dialects.h
include/ListProject/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/ListProject/Conversion/ListToStandard/: ListToStandard.h
include/ListProject/Dialect/: CMakeLists.txt
include/ListProject/Dialect/List/IR/: CMakeLists.txt  ListDialect.h  ListDialect.td  ListOps.h  ListOps.td  ListTypes.h  ListTypes.td
include/ListProject/Dialect/List/Transforms/: CMakeLists.txt  ListPasses.h  ListPasses.td
include/MyProject-c/: Dialects.h
include/MyProject/Dialect/List/IR/: ListDialect.h  ListDialect.td  ListOps.h  ListOps.td  ListTypes.h  ListTypes.td
include/MyProject/Dialect/List/Transforms/: ListPasses.h  ListPasses.td
include/MyProject/Dialect/MyDialect/IR/: CMakeLists.txt  MyDialectDialect.h  MyDialectDialect.td  MyDialectOps.h  MyDialectOps.td  MyDialectTypes.h  MyDialectTypes.td
include/MyProject/Dialect/MyDialect/Transforms/: CMakeLists.txt  MyDialectPasses.h  MyDialectPasses.td
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/ListToStandard/: CMakeLists.txt  ListToStandard.cpp
lib/Dialect/List/IR/: CMakeLists.txt  ListDialect.cpp  ListOps.cpp  ListTypes.cpp
lib/Dialect/List/Transforms/: CMakeLists.txt  ListPasses.cpp
lib/Dialect/MyDialect/IR/: CMakeLists.txt  MyDialectDialect.cpp  MyDialectOps.cpp  MyDialectTypes.cpp
lib/Dialect/MyDialect/Transforms/: CMakeLists.txt  MyDialectPasses.cpp
listproject-opt/: CMakeLists.txt  listproject-opt.cpp
myproject-opt/: CMakeLists.txt  myproject-opt.cpp
myproject-translate/: CMakeLists.txt  myproject-translate.cpp
python/: CMakeLists.txt  ListProjectExtensionNanobind.cpp  ListProjectExtensionPybind11.cpp  MyProjectExtensionNanobind.cpp  MyProjectExtensionPybind11.cpp
python/mlir_listproject/dialects/: ListOps.td  list_nanobind.py  list_pybind11.py
python/mlir_myproject/dialects/: ListOps.td  MyDialectOps.td  list_nanobind.py  list_pybind11.py  mydialect_nanobind.py  mydialect_pybind11.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  listproject-capi-test.c  myproject-capi-test.c
test/List/: dummy.mlir  invalid.mlir  lowering.mlir  ops.mlir  remove-some-foo.mlir
test/ListProject/: dummy.mlir  listproject-opt.mlir
test/MyProject/: dummy.mlir  myproject-opt.mlir  myproject-translate.mlir  ops.mlir
test/python/: ops.py  smoketest.py
